# contract-link

./: Cargo.toml  README.md  install.sh
src/: config_handler.rs  generate.rs  main.rs  types.rs
src/generate/: mod.rs
src/generate/contract_frameworks/: foundry.rs  mod.rs
src/generate/web3_frameworks/: mod.rs  viem.rs
